# Abraxius

./: .gitignore  LICENSE  README.md  bridge.js  cli.js  client.js  moonwave.toml  package-lock.json  package.json  server.js
.codex/skills/abraxius-studio-sync/: SKILL.md
.codex/skills/abraxius-studio-sync/agents/: openai.yaml
.codex/skills/abraxius-studio-sync/references/: commands.md
.moonwave/: custom.css
app/Abraxius.App/: Abraxius.App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
docs/: ai-context.md  api.md  cli.md  codex-skill.md  installation.md  intro.md  rust-extension.md  sync.md  windows-app.md
lib/: ai-context.js  context.js  logger.js  pending.js  plugin-server.js  project.js  pull.js  push.js  studio-logger.js
plugin/: README.md
plugin/AbraxiusCompanion/: Logger.luau  init.server.luau
rust/abraxius-rs/: Cargo.toml
rust/abraxius-rs/src/: main.rs
scripts/: install-plugin.js  smoke.js
